ligolang/src/test/contracts/negative/vars_consts/multiple_vars_1.jsligo
let foo = (_ : unit) : int =>
  {
    const [x,y] = [4,5];
    x = 2;
    y = 3;
    return (x + y);
  };
